--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,9 @@
     --primary-color: #047aed;
     --secondary-color: #1c3fa8;
     --dark-color: #002240;
-    --light-color: #fff;
+    --light-color: #f4f4f4;
+    --success-color: #5cb85c;
+    --error-color: #d9534f;
 }
 
 * {
@@ -40,6 +42,12 @@ p {
 
 img {
     width: 100%;
+}
+
+code, pre {
+    background: #333;
+    color: #fff;
+    padding: 10px;
 }
 
 /* Navbar */
@@ -81,6 +89,7 @@ img {
 }
 
 .showcase p {
+    /* padding: 20px 60px 20px 0px; */
     padding: 20px 0;
 }
 
@@ -88,6 +97,10 @@ img {
     grid-template-columns: 55% 45%;
     gap: 30px;
     overflow: visible;
+}
+
+.showcase-text {
+    animation: slideInFromLeft 1s ease-in;
 }
 
 .showcase-form {
@@ -98,6 +111,7 @@ img {
     padding: 40px;
     justify-self: flex-end;
     z-index: 100;
+    animation: slideInFromRight 1s ease-in;
 }
 
 .showcase-form .form-control {
@@ -134,10 +148,11 @@ img {
 /* Stats */
 .stats {
     padding-top: 100px;
+    animation: slideInFromBottom 1s ease-in;
 }
 
 .stats-heading {
-    max-width: 500px;
+    max-width: 100vw;
     margin: auto;
 }
 
@@ -186,18 +201,119 @@ img {
     transform: translateY(-15px);
 }
 
+/* Features */
+.features-head img, .docs-head img {
+    width: 200px;
+    justify-self: flex-end;
+}
+
+.features-sub-head img {
+    width: 300px;
+    justify-self: flex-end;
+}
+
+.features-main .card > i {
+    margin-right: 20px;
+}
+
+.features-main .grid {
+    padding: 30px;
+}
+
+.features-main .grid > *:first-child {
+    grid-column: 1 / span 3;
+}
+
+.features-main .grid > *:nth-child(2) {
+    grid-column: 1 / span 2;
+}
+
+/* Docs */
+.docs-main h3 {
+    margin: 20px 0;
+}
+
+.docs-main .grid {
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start;
+}
+
+.docs-main nav li {
+    font-size: 17px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #ccc;
+}
+
+.docs-main a:hover {
+    font-weight: bold;
+}
+
+/* Animations */
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromTop {
+    0% {
+        transform: translateY(-100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
+@keyframes slideInFromBottom {
+    0% {
+        transform: translateY(100%);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
 /* Footer */
 .footer .social a {
     margin: 0 10px;
 }
 
 /* Tablets and under */
+@media(min-width: 768px){
+    .showcase-text {
+        padding: 20px 50px 20px 5px;
+    }
+
+    .showcase-form {
+        max-width: 350px;
+    }
+}
+
 @media(max-width: 768px) {
     .grid,
     .showcase .grid,
     .stats .grid,
     .cli .grid,
-    .cloud .grid {
+    .cloud .grid,
+    .features-main .grid,
+    .docs-main .grid {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
     }
@@ -209,21 +325,57 @@ img {
     .showcase-text {
         text-align: centers;
         margin-top: 40px;
+        animation: slideInFromTop 1s ease-in;
     }
 
     .showcase-form {
         justify-self: center;
         margin: auto;
+        animation: slideInFromBottom 1s ease-in;
     }
     
     .cli .grid >*:first-child {
         grid-column: 1;
         grid-row: 1;
     }
+
+    .features-head,
+    .features-sub-head,
+    .docs-head {
+        text-align: center;
+    }
+    
+    .features-head img,
+    .features-sub-head img,
+    .docs-head img {
+        justify-self: center;
+    }
+
+    .features-main .grid > *:first-child,
+    .features-main .grid > *:nth-child(2) {
+        grid-column: 1;
+    }
 }
 
 /* Mobile */
-@media(max-width: 500px) {
+@media(max-width: 570px) {
+
+    .features-head .grid,
+    .features-sub-head .grid,
+    .docs-head .grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .showcase-text {
+        text-align: center;
+        padding: 30px;
+    }
+
+    .showcase-form {
+        max-width: 350px;
+    }
+
     .navbar {
         height: 110px;
     }
@@ -235,5 +387,22 @@ img {
     .navbar ul {
         padding: 10px;
         background: rgba(0, 0, 0, 0.1);
+    }
+
+    .docs-head .container div h1,
+    .features-head .container div h1,
+    .showcase .container div h1 {
+        font-size: 2rem;
+    }
+    
+    .docs-head .container div p,
+    .features-head .container div p,
+    .showcase .container div p {
+        font-size: 1rem;
+    }
+    
+    .docs-head .container img,
+    .features-head .container img {
+        width: 150px;
     }
 }
